# OddsChain

./: .gitignore  README.md
program/: Anchor.toml
program/programs/oddschain/: Cargo.toml
program/programs/oddschain/src/: lib.rs
program/programs/txmarket/: Cargo.toml
program/programs/txmarket/src/: lib.rs
server/: .env.example  package-lock.json  package.json  tsconfig.json
server/idl/: oddschain.json  txmarket.json
server/src/: activate.ts  chain.ts  index.ts  inspect.ts  txline.ts
web/: .env.local.example  .env.production  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/market/[id]/: page.tsx
web/app/portfolio/: page.tsx
web/app/schedule/: page.tsx
web/components/: Flag.tsx  Header.tsx  Providers.tsx
web/lib/: anchor.ts  api.ts  flags.ts
